--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://sibasis:4lkF1EytcYjKjTCE@cluster0.nthc1vr.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://sibasisbadatya:ekzA8MuunIYfkUsZ@cresumme.aa7m7gz.mongodb.net/?retryWrites=true&w=majority&appName=cresumme
 
